Edit before homework

--- a/main.scss
+++ b/main.scss
@@ -63,3 +63,21 @@ header {
     }
   }
 }
+
+//Ilija edits here
+.ilija-sports {}
+
+//Marija edits here
+.marija-sports {}
+
+//Bojan edits here
+.bojan-sports {}
+
+//Angela edits here 
+.angela-sports {}
+
+//Todor edits here
+.todor-sports {}
+
+//Elena edits here
+.elena-sports {}
