--- a/css/main.css
+++ b/css/main.css
@@ -23,3 +23,61 @@ header .link-secondary:hover {
 header .text-white:hover {
   text-decoration: underline;
 }
+
+.marija-sports {
+  background-image: url(../images/basketball-equipment\ 1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.marija-sports .size {
+  font-size: smaller;
+}
+.marija-sports p {
+  color: #ffc107 !important;
+  -webkit-text-decoration: wavy;
+          text-decoration: wavy;
+}
+
+footer {
+  background-color: #091F5B !important;
+}
+footer .row {
+  justify-content: center;
+}
+footer .row .fs-5 {
+  color: white;
+  font-weight: bold;
+}
+footer .row .list-unstyled {
+  padding-bottom: 20px;
+}
+footer .row .list-unstyled .mb-2 {
+  color: #b6b2b2;
+}
+footer .row .list-unstyled .mb-2 a {
+  color: white;
+  text-decoration: none;
+}
+footer .row .list-unstyled .mb-2 a:hover {
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+footer .row .list-unstyled .mb-1 {
+  font-weight: bold;
+}
+footer .row .col-6 {
+  margin-right: 30px;
+}
+footer .row .col-6 h5 {
+  color: white;
+  text-decoration: none;
+}
+footer .row .col-6 h5:hover {
+  color: #ffc107;
+  cursor: pointer;
+}
+footer .row .col-6 .newsLetter {
+  color: white;
+}
