--- a/main.scss
+++ b/main.scss
@@ -73,13 +73,18 @@ header {
 
 
 .marija-sports {
+  background-image: url(../images/basketball-equipment\ 1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
   .size {
     font-size: smaller;
   }
-    
-  
+
+
   p {
-    color: #ffc107;
+    color: #ffc107 !important;
     text-decoration: wavy;
   }
 
@@ -97,50 +102,56 @@ header {
 
 //Elena edits here
 
-  footer{
-    background-color:#091F5B !important;
-    
-     .row{
-      justify-content: center;
-      .fs-5{
-        color: white;
-        font-weight: bold;
-      }
-      .list-unstyled{
-        padding-bottom: 20px;
-        .mb-2{
-          color: #b6b2b2;
-          a{
-            color: white;
-            text-decoration: none;
-            &:hover{
-              color: white;
-              font-weight: bold;
-              cursor: pointer;
-            }
-          }
-        }
-        .mb-1{
-          font-weight: bold;
-        }
-      }
-      .col-6{
-        margin-right: 30px;
-        h5{
+footer {
+  background-color: #091F5B !important;
+
+  .row {
+    justify-content: center;
+
+    .fs-5 {
+      color: white;
+      font-weight: bold;
+    }
+
+    .list-unstyled {
+      padding-bottom: 20px;
+
+      .mb-2 {
+        color: #b6b2b2;
+
+        a {
           color: white;
           text-decoration: none;
-          &:hover{
-            color: $color-yellow;
-            cursor: pointer;
-          }  
-          }
-          .newsLetter{
+
+          &:hover {
             color: white;
+            font-weight: bold;
+            cursor: pointer;
           }
+        }
       }
-     }
+
+      .mb-1 {
+        font-weight: bold;
+      }
     }
-   
-   
-  
-  
+
+    .col-6 {
+      margin-right: 30px;
+
+      h5 {
+        color: white;
+        text-decoration: none;
+
+        &:hover {
+          color: $color-yellow;
+          cursor: pointer;
+        }
+      }
+
+      .newsLetter {
+        color: white;
+      }
+    }
+  }
+}
