--- a/main.scss
+++ b/main.scss
@@ -65,7 +65,23 @@ header {
 }
 
 //Ilija edits here
-// .ilija-sports {}
+.ilija-sports { 
+
+  .col{
+    background-image: url(images/download.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .row{
+    background-repeat: no-repeat ;
+   
+    
+  }
+  
+
+
+}
 
 //Marija edits here
 
