--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,30 @@ header .text-white:hover {
           text-decoration: wavy;
 }
 
+.bojan-sports {
+  background-image: url(../images/mbappe-real.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.bojan-sports .bg-mbape {
+  background-image: url(../images/mbappe-real.png);
+  background: linear-gradient(90deg, rgba(33, 37, 93, 0.8953956583) 43%, rgba(255, 255, 255, 0) 71%);
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: relative;
+  height: 100%;
+}
+.bojan-sports .bg-mbape .bg-overlay {
+  width: 100%;
+  height: 100%;
+  background: rgb(33, 37, 93);
+  background: linear-gradient(90deg, rgba(33, 37, 93, 0.8953956583) 43%, rgba(255, 255, 255, 0) 71%);
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 footer {
   background-color: #091F5B !important;
 }
