--- a/main.scss
+++ b/main.scss
@@ -126,7 +126,29 @@ header {
 
 
 //Bojan edits here
-// .bojan-sports {}
+.bojan-sports {
+  background-image: url(../images/mbappe-real.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  .bg-mbape {
+    background-image: url(../images/mbappe-real.png);
+    background: linear-gradient(90deg, rgba(33,37,93,0.8953956582633054) 43%, rgba(255,255,255,0) 71%);
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    height: 100%;
+    .bg-overlay {
+      width: 100%;
+      height: 100%;
+      background: rgb(33,37,93);
+      background: linear-gradient(90deg, rgba(33,37,93,0.8953956582633054) 43%, rgba(255,255,255,0) 71%);
+      background-size: contain;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+}
 
 //Angela edits here 
 // .angela-sports {}
